# cargo-tuwui

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: app.rs  config.rs  errors.rs  event.rs  features.rs  keybinds.rs  logging.rs  main.rs  terminal.rs  ui.rs
src/manifest/: dependency.rs  mod.rs  package.rs
src/ui/: help.rs  icons.rs  mod.rs  sidebar.rs
src/ui/main/: dependency.rs  mod.rs
src/ui/modals/: help.rs  mod.rs  update_dependency.rs
src/updater/: mod.rs  registry.rs
